--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="line line-1"></div>
             <div class="line line-2"></div>
             <div class="line line-3"></div>
+            <span>Close</span>
         </div>
         <header class="header">
             <div class="img-wrapper">
@@ -30,6 +31,31 @@
                 <button>Discover now</button>
             </div>
         </header>
+
+        <section class="sidebar">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="#" class="menu-link" data-content="Home">Home</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#" class="menu-link" data-content="About Us">About Us</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#" class="menu-link" data-content="Team">Team</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#" class="menu-link" data-content="Pricing">Pricing</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#" class="menu-link" data-content="Contact">Contact</a>
+                </li>
+            </ul>
+            <div class="social-media">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </section>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"
