Implemented About Us section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,400;0,600;1,300;1,400;1,600&family=Muli:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />    
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -54,6 +54,84 @@
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </section>
+
+        <section class="about-us">
+            <div class="section-header">
+                <h1 class="section-heading">About Us</h1>
+                <div class="underline"></div>
+            </div>
+            <div class="services">
+                <div class="service">
+                    <div class="service-header">
+                        <i class="fas fa-pen-nib"></i>
+                        <h3>Interior</h3>
+                    </div>
+                    <p class="service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+                        reprehenderit odio dolorum quam! Exercitationem tempora sint deserunt ducimus illo
+                        inventore? Sequi, autem! Itaque architecto error porro non reiciendis mollitia dolor.
+                    </p>
+                </div>
+                <div class="service">
+                    <div class="service-header">
+                        <i class="fas fa-paint-roller"></i>
+                        <h3>Exterior</h3>
+                    </div>
+                    <p class="service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+                        reprehenderit odio dolorum quam! Exercitationem tempora sint deserunt ducimus illo
+                        inventore? Sequi, autem! Itaque architecto error porro non reiciendis mollitia dolor.
+                    </p>
+                </div>
+                <div class="service">
+                    <div class="service-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <p class="service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+                        reprehenderit odio dolorum quam! Exercitationem tempora sint deserunt ducimus illo
+                        inventore? Sequi, autem! Itaque architecto error porro non reiciendis mollitia dolor.
+                    </p>
+                </div>
+                <div class="service">
+                    <div class="service-header">
+                        <i class="fas fa-paint-brush"></i>
+                        <h3>Decoration</h3>
+                    </div>
+                    <p class="service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+                        reprehenderit odio dolorum quam! Exercitationem tempora sint deserunt ducimus illo
+                        inventore? Sequi, autem! Itaque architecto error porro non reiciendis mollitia dolor.
+                    </p>
+                </div>
+                <div class="service">
+                    <div class="service-header">
+                        <i class="fas fa-ruler-combined"></i>
+                        <h3>Planning</h3>
+                    </div>
+                    <p class="service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+                        reprehenderit odio dolorum quam! Exercitationem tempora sint deserunt ducimus illo
+                        inventore? Sequi, autem! Itaque architecto error porro non reiciendis mollitia dolor.
+                    </p>
+                </div>
+                <div class="service">
+                    <div class="service-header">
+                        <i class="far fa-building"></i>
+                        <h3>Execution</h3>
+                    </div>
+                    <p class="service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+                        reprehenderit odio dolorum quam! Exercitationem tempora sint deserunt ducimus illo
+                        inventore? Sequi, autem! Itaque architecto error porro non reiciendis mollitia dolor.
+                    </p>
+                </div>
+                <div class="about-us-img-wrapper">
+                    <img src="images/house.png" alt="house">
+                </div>
             </div>
         </section>
     </div>
