--- a/index.html
+++ b/index.html
@@ -134,6 +134,57 @@
                 </div>
             </div>
         </section>
+
+        <section class="team">
+            <div class="section-header">
+                <h1 class="section-heading">Our Team</h1>
+                <div class="underline"></div>
+            </div>
+            <div class="cards-wrapper">
+                <div class="card" data-tilt>
+                    <div class="card-img-wrapper">
+                        <img src="images/person-1.jpg" alt="CEO">
+                    </div>
+                    <div class="card-info">
+                        <h2>John Smith</h2>
+                        <h3>CEO</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum voluptatum voluptates
+                            doloremque, fuga optio eaque delectus pariatur repudiandae.
+                        </p>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="card" data-tilt>
+                    <div class="card-img-wrapper">
+                        <img src="images/person-2.jpg" alt="Designer">
+                    </div>
+                    <div class="card-info">
+                        <h2>Ann Brown</h2>
+                        <h3>Designer</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum voluptatum voluptates
+                            doloremque, fuga optio eaque delectus pariatur repudiandae.
+                        </p>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="card" data-tilt>
+                    <div class="card-img-wrapper">
+                        <img src="images/person-3.jpg" alt="Architect">
+                    </div>
+                    <div class="card-info">
+                        <h2>Mary Doe</h2>
+                        <h3>Architect</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum voluptatum voluptates
+                            doloremque, fuga optio eaque delectus pariatur repudiandae.
+                        </p>
+                        <button>Read more</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"
