--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
         </footer>
     </div>
 
+    <a href="#" class="scroll-btn"><i class="fas fa-arrow-up"></i></a>
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="tilt.js"></script>
