--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 
 <body>
+    <div class="spinner-container">
+        <div class="circles">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="hamburger-menu">
@@ -222,9 +234,9 @@
                 </div>
             </div>
         </footer>
-    </div>
 
-    <a href="#" class="scroll-btn"><i class="fas fa-arrow-up"></i></a>
+        <a href="#" class="scroll-btn"><i class="fas fa-arrow-up"></i></a>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
